LIB-86 Fix sticky badge overlap

--- a/custom/themes/lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/lib_unb_ca/src/scss/style.scss
@@ -273,8 +273,12 @@ dl.two-cols {
   padding-right: 1.5rem;
   position: relative;
 
-  .attribution:before {
-    content: '\f783';
+  .attribution {
+    margin-right: 1rem;
+
+    &:before {
+      content: '\f783';
+    }
   }
 
   .badge {
